--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
       {
         "raw": "hellokey",
         "scope": null,
-        "escapedName": "hellokey",
+        "escapedNsdfsdfame": "hellokey",
         "name": "hellokey",
         "rawSpec": "",
         "spec": "latest",
