--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "_id": "hellokey@1.0.0",
   "_inCache": true,
   "_location": "/hellokey",
-  "_nodeVersion": "6.9.1",
+  "_nodeVersion": "sdfsdfsdf6.9.1",
   "_npmOperationalInternal": {
     "host": "packages-18-east.internal.npmjs.com",
     "tmp": "tmp/hellokey-1.0.0.tgz_1477405757493_0.7574930251576006"
